[package]
name = "hypixel_auction_helper"
version = "0.1.0"
authors = ["MrMarnic <marceljedig@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
serde = {version="1.0.125", features = ["derive"]}
reqwest = "0.11.2"
tokio = {version="1.4.0",features = ["full"]}
futures = "0.3.13"
winconsole = "0.11.1"
num-format = "0.4.0"